--- a/.mini-ide/project-ide.json
+++ b/.mini-ide/project-ide.json
@@ -1,4 +1,5 @@
 {
   "ignoreHttpDomainCheck": true,
-  "ignoreWebViewDomainCheck": true
+  "ignoreWebViewDomainCheck": true,
+  "enableIssuesAutoWrap": true
 }
