--- a/.mini-ide/project-ide.json
+++ b/.mini-ide/project-ide.json
@@ -1,5 +1,6 @@
 {
   "ignoreHttpDomainCheck": true,
   "ignoreWebViewDomainCheck": true,
-  "enableIssuesAutoWrap": true
+  "enableIssuesAutoWrap": true,
+  "ignoreCertificateDomainCheck": true
 }
