--- a/app.json
+++ b/app.json
@@ -16,5 +16,6 @@
     "requestReferrerStyle": "full",
     "requestDefaultEnableCookie": true,
     "connectSocketDefaultMultiple": true
-  }
+  },
+  "useDynamicPlugins": false
 }
