--- a/.mini-ide/project-ide.json
+++ b/.mini-ide/project-ide.json
@@ -2,5 +2,5 @@
   "ignoreHttpDomainCheck": true,
   "ignoreWebViewDomainCheck": true,
   "enableIssuesAutoWrap": true,
-  "ignoreCertificateDomainCheck": false
+  "ignoreCertificateDomainCheck": true
 }
