--- a/app.json
+++ b/app.json
@@ -1,12 +1,7 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/mahjong1/mahjong1",
-    "pages/mahjong2/mahjong2",
-    "pages/mahjong3/mahjong3",
-    "pages/mahjong4/mahjong4",
-    "pages/mahjong5/mahjong5",
-    "pages/mahjong6/mahjong6"
+    "pages/mahjong/mahjong"
   ],
   "window": {
     "defaultTitle": "逸生活"
